--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,7 +7,7 @@
     <title>Sprite Sheet Demo</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <canvas id="game-canvas" width="320" height="180"></canvas>
+    <script type="module" src="/main.js" defer></script>
   </body>
 </html>
